<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <version>0.0.1-SNAPSHOT</version>
  <name>MTG Deck Editor</name>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.9</source>
          <target>1.9</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <groupId>editor</groupId>
  <artifactId>editor</artifactId>
  <dependencies>
  	<dependency>
  		<groupId>com.google.code.gson</groupId>
  		<artifactId>gson</artifactId>
  		<version>2.4</version>
  	</dependency>
  	<dependency>
  		<groupId>com.jidesoft</groupId>
  		<artifactId>jide-oss</artifactId>
  		<version>3.6.14</version>
  	</dependency>
  	<dependency>
  		<groupId>com.joestelmach</groupId>
  		<artifactId>natty</artifactId>
  		<version>0.12</version>
  	</dependency>
  	<dependency>
  		<groupId>org.slf4j</groupId>
  		<artifactId>slf4j-nop</artifactId>
  		<version>1.7.22</version>
  	</dependency>
  </dependencies>
</project>